Reverted back to allowing menu to overlap content. Fixed errors from overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,11 @@ body {
 
 .menu {
 	/* Contains the entire menu */
+	position: absolute;
 	background: rgba(51, 51, 102, 1); /* Light blue background */
 	white-space: nowrap; /* No text wrapping */
 	height: 100%;
+	z-index: 100;
 }
 
 .menu-container {
@@ -56,6 +58,7 @@ body {
 	width: calc(100% - 60px);
 	min-width: 0px;
 	top: 0;
+	z-index: 0;
 }
 
 #heading {
